compiler/tools/fpp-check/test/state_machine/typed_elements/sm_choice_bad_if_action_type.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/typed_elements/sm_choice_bad_if_action_type.fpp:5.24
  choice C { if g do { a } enter S else enter S }
                       ^
error: type mismatch at choice
type of choice is None
type of action is U32
